добавив першу сторінку

--- a/portfolio.html
+++ b/portfolio.html
@@ -25,13 +25,15 @@
 </nav>
 </header>
 <main>
+    <section>
     <ul>
         <li><button type="button" class="button">Усі</button></li>
         <li><button type="button" class="button">Веб-Сайти</button></li>
         <li><button type="button" class="button">Додатки</button></li>
         <li><button class="button" type="button">Дизайн</button></li>
         <li><button class="button" type="button">Маркетинг</button></li>
-    </ul>
+    </ul> </section>
+    <section>
     <ul>
         <li><img src="img/img(1).jpg" alt="ноутбук">
         <a href="#">Технокряк</a>
@@ -70,23 +72,23 @@
         <p>Додаток</p>
         </li>
     </ul>
+</section>
 </main>
 <footer>
     <a href="#">WebStudio</a>
-    
-        <p>Місто Київ пр-т Лесі Українки, 26</p>
         <ul>
+            <li><a href="https://goo.gl/maps/BeasPpXtZJGkQwrS6">Місто Київ пр-т Лесі Українки, 26</a></li>
         <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
        <li>
    <a href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
-    <p>Підпишіться на розсилку</p>
-    <form>
+    <!-- <p>Підпишіться на розсилку</p>
+     <form>
         <label>Email
             <input type="email" name="email"/>
         </label>
     <button type="submit">Підписатися</button>
-    </form>
+    </form> --> 
 </footer> 
 </body>
 </html>
