--- a/index.html
+++ b/index.html
@@ -63,31 +63,31 @@
       <section>
         <h2>Чим ми займаємося</h2>
         <ul>
-          <li><img src="\img\box 1.jpg" alt="зображення" width="300" /></li>
-          <li><img src="\img\box 3.jpg" alt="зображення" width="300" /></li>
-          <li><img src="\img\img.jpg" alt="зображення" width="300" /></li>
+          <li><img src="img/box1.jpg" alt="зображення" width="300" /></li>
+          <li><img src="img/img.jpg" alt="зображення" width="300" /></li>
+          <li><img src="img/box3.jpg" alt="зображення" width="300" /></li>
         </ul>
       </section>
       <section>
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="\img\img (1).jpg" alt="Наша команда" width="300" />
+            <img src="\img\imgg(1).jpg" alt="Наша команда" width="300" />
             <h4>Ігор Дем'яненко</h4>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="\img\img (2).jpg" alt="Наша команда" width="300" />
+            <img src="\img\imgg(2).jpg" alt="Наша команда" width="300" />
             <h4>Ольга Рєпіна</h4>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="\img\img (3).jpg" alt="Наша команд" width="300" />
+            <img src="\img\imgg(3).jpg" alt="Наша команд" width="300" />
             <h4>Микола Тарасов</h4>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="\img\img (4).jpg" alt="Наша команд" width="300" />
+            <img src="\img\imgg(4).jpg" alt="Наша команд" width="300" />
             <h4>Михайло Єрмаков</h4>
             <p>UI Designer</p>
           </li>
