--- a/index.html
+++ b/index.html
@@ -72,22 +72,22 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="\img\imgg(1).jpg" alt="Наша команда" width="300" />
+            <img src="img/imgg(1).jpg" alt="Наша команда" width="300" />
             <h4>Ігор Дем'яненко</h4>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="\img\imgg(2).jpg" alt="Наша команда" width="300" />
+            <img src="img/imgg(2).jpg" alt="Наша команда" width="300" />
             <h4>Ольга Рєпіна</h4>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="\img\imgg(3).jpg" alt="Наша команд" width="300" />
+            <img src="img/imgg(3).jpg" alt="Наша команд" width="300" />
             <h4>Микола Тарасов</h4>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="\img\imgg(4).jpg" alt="Наша команд" width="300" />
+            <img src="img/imgg(4).jpg" alt="Наша команд" width="300" />
             <h4>Михайло Єрмаков</h4>
             <p>UI Designer</p>
           </li>
