--- a/index.html
+++ b/index.html
@@ -4,19 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Roboto:wght@100;400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <header>
-      <a href="#">WebStudio</a>
+      <a class="webstudio" href="#">WebStudio</a>
       <nav>
         <ul>
           <li><a href="#">Студія</a></li>
           <li><a href="#">Портфоліо</a></li>
           <li><a href="#">Контакти</a></li>
         </ul>
-
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+380961111111 ">+38 096 111 11 11</a></li>
@@ -46,13 +52,13 @@
             </p>
           </li>
           <li>
-            <h3>Планування</h3>
+            <h3>ПЛАНУВАННЯ</h3>
             <p>
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-            <h3>Сучасні Технології</h3>
+            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p>
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
@@ -95,9 +101,9 @@
       </section>
     </main>
     <footer>
-      <a href="#">WebStudio</a>
+      <a class="webstudio" href="#">WebStudio</a>
       <ul>
-        <li><a href="#">Місто Київ пр-т Лесі Українки, 26</a></li>
+        <li><a href="https://goo.gl/maps/LNZbK8tX5sq8bWxk8">Місто Київ пр-т Лесі Українки, 26</a></li>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:+380961111111 ">+38 096 111 11 11</a></li>
       </ul>
