--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <body>
     <header>
-      <a class="webstudio" href="#">WebStudio</a>
+      <a class="webstudio" href="#"><span class="web">Web</span><span class="studio">Studio</span></a>
       <nav>
         <ul>
           <li><a href="#">Студія</a></li>
@@ -101,7 +101,7 @@
       </section>
     </main>
     <footer>
-      <a class="webstudio" href="#">WebStudio</a>
+      <a class="webstudio" href="#"><span class="web">Web</span><span class="studio">Studio</span></a>
       <ul>
         <li><a href="https://goo.gl/maps/LNZbK8tX5sq8bWxk8">Місто Київ пр-т Лесі Українки, 26</a></li>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
