added fonts to portfolio

--- a/index.html
+++ b/index.html
@@ -15,97 +15,95 @@
   </head>
 
   <body>
-    <header>
-      <a class="webstudio" href="#"><span class="web">Web</span><span class="studio">Studio</span></a>
-      <nav>
-        <ul>
-          <li><a href="#">Студія</a></li>
-          <li><a href="#">Портфоліо</a></li>
-          <li><a href="#">Контакти</a></li>
+    <header class="header">
+      <a class="header-webstudio" href="#">Web<span class="header-studio">Studio</span></a>
+      <nav class="header-nav">
+        <ul class="header-menu">
+          <li><a href="#" class="header-menu-link">Студія</a></li>
+          <li><a href="#" class="header-menu-link">Портфоліо</a></li>
+          <li><a href="#" class="header-menu-link">Контакти</a></li>
         </ul>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111 ">+38 096 111 11 11</a></li>
+      </nav>
+      <nav class="header-nav">
+        <ul class="header-contact">
+          <li><a href="mailto:info@devstudio.com" class="header-contact-link">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111" class="header-contact-link">+38 096 111 11 11</a></li>
         </ul>
       </nav>
     </header>
-    <main>
-      <section>
-        <h1>ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
-        <button type="button">Замовити послугу</button>
+    <main class="main">
+      <section class="main-section">
+        <h1 class="main-heading">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
+        <button type="button" class="main-button">Замовити послугу</button>
       </section>
-      <section>
-        <ul>
+      <section class="main-section">
+        <ul class="main-list">
           <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції.
-            </p>
-          </li>
-
-          <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
-            <p>
-              Завдання організації, особливо рамки і місце навчання кадрів тягне
-              у себе.
+            <h3 class="main-subheading">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p class="main-description">
+              Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
             </p>
           </li>
           <li>
-            <h3>ПЛАНУВАННЯ</h3>
-            <p>
+            <h3 class="main-subheading">ПУНКТУАЛЬНІСТЬ</h3>
+            <p class="main-description">
+              Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+            </p>
+          </li>
+          <li>
+            <h3 class="main-subheading">ПЛАНУВАННЯ</h3>
+            <p class="main-description">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
+            <h3 class="main-subheading">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p class="main-description">
+              Значимість цих проблем настільки очевидна, що реалізація планових завдань.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Чим ми займаємося</h2>
-        <ul>
-          <li><img src="img/box1.jpg" alt="зображення" width="300" /></li>
-          <li><img src="img/img.jpg" alt="зображення" width="300" /></li>
-          <li><img src="img/box3.jpg" alt="зображення" width="300" /></li>
+      <section class="main-section">
+        <h2 class="section-heading">Чим ми займаємося</h2>
+        <ul class="main-list">
+          <li><img src="img/box1.jpg" alt="зображення" class="main-image" width="300" /></li>
+          <li><img src="img/img.jpg" alt="зображення" class="main-image" width="300" /></li>
+          <li><img src="img/box3.jpg" alt="зображення" class="main-image" width="300" /></li>
         </ul>
       </section>
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
+      <section class="main-section">
+        <h2 class="section-heading">Наша команда</h2>
+        <ul class="main-list">
           <li>
-            <img src="img/imgg(1).jpg" alt="Наша команда" width="300" />
-            <h4>Ігор Дем'яненко</h4>
-            <p>Product Designer</p>
+            <img src="img/imgg(1).jpg" alt="Наша команда" class="main-image" width="300" />
+            <h4 class="main-name">Ігор Дем'яненко</h4>
+            <p class="main-description">Product Designer</p>
           </li>
           <li>
-            <img src="img/imgg(2).jpg" alt="Наша команда" width="300" />
-            <h4>Ольга Рєпіна</h4>
-            <p>Frontend Developer</p>
+            <img src="img/imgg(2).jpg" alt="Наша команда" class="main-image" width="300" />
+            <h4 class="main-name">Ольга Рєпіна</h4>
+            <p class="main-description">Frontend Developer</p>
           </li>
           <li>
-            <img src="img/imgg(3).jpg" alt="Наша команд" width="300" />
-            <h4>Микола Тарасов</h4>
-            <p>Marketing</p>
+            <img src="img/imgg(3).jpg" alt="Наша команд" class="main-image" width="300" />
+            <h4 class="main-name">Микола Тарасов</h4>
+            <p class="main-description">Marketing</p>
           </li>
           <li>
-            <img src="img/imgg(4).jpg" alt="Наша команд" width="300" />
-            <h4>Михайло Єрмаков</h4>
-            <p>UI Designer</p>
+            <img src="img/imgg(4).jpg" alt="Наша команд" class="main-image" width="300" />
+            <h4 class="main-name">Михайло Єрмаков</h4>
+            <p class="main-description">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a class="webstudio" href="#"><span class="web">Web</span><span class="studio">Studio</span></a>
-      <ul>
-        <li><a href="https://goo.gl/maps/LNZbK8tX5sq8bWxk8">Місто Київ пр-т Лесі Українки, 26</a></li>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111 ">+38 096 111 11 11</a></li>
+    <footer class="footer">
+      <a class="footer-webstudio" href="#">Web<span class="footer-studio">Studio</span></a>
+      <ul class="footer-list">
+        <li><a href="https://goo.gl/maps/LNZbK8tX5sq8bWxk8" class="footer-address">Місто Київ пр-т Лесі Українки, 26</a></li>
+        <li><a href="mailto:info@devstudio.com" class="footer-contact">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="footer-contact">+38 096 111 11 11</a></li>
       </ul>
     </footer>
   </body>
