--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header class="header">
-      <div class="container header-navigation">
+    <header class="header container">
         <a class="header-webstudio" href="index.html"
           >Web<span class="header-studio">Studio</span></a
         >
@@ -47,10 +46,9 @@
             >
           </li>
         </ul>
-      </div>
     </header>
     <main class="main">
-      <section class="main-section">
+      <section class="banner">
           <h1 class="main-heading">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
           <button type="button" class="main-button">Замовити послугу</button>
       </section>
@@ -87,9 +85,8 @@
           </ul>
         </div>
       </section>
-      <section class="photo-section">
+      <section class="photo-section container">
         <h2 class="section-heading">Чим ми займаємося</h2>
-        <div class="container">
           <ul class="main-list-images">
             <li>
               <img
@@ -119,12 +116,10 @@
               />
             </li>
           </ul>
-        </div>
       </section>
       <section class="team-section">
-        <div class="teambg">
+        <div class="container">
         <h2 class="section-heading">Наша команда</h2>
-        <div class="container ">
           <ul class="main-list-team">
             <li>
               <img
@@ -171,7 +166,6 @@
               <p class="main-description-job">UI Designer</p>
             </li>
           </ul>
-        </div>
       </div>
       </section>
     </main>
