--- a/portfolio.html
+++ b/portfolio.html
@@ -18,114 +18,112 @@
 </head>
 
 <body>
-  <div class="container">
-    <header class="header">
-      <div class="container header-navigation">
-        <a class="header-webstudio" href="index.html">Web<span class="header-studio">Studio</span></a>
-        <nav class="header-nav">
-          <ul class="header-menu">
-            <li><a href="index.html" class="header-menu-link">Студія</a></li>
-            <li>
-              <a href="portfolio.html" class="header-menu-link">Портфоліо</a>
-            </li>
-            <li><a href="#" class="header-menu-link">Контакти</a></li>
-          </ul>
-        </nav>
-        <ul class="header-contact">
-          <li>
-            <a href="mailto:info@devstudio.com" class="header-contact-link">info@devstudio.com</a>
-          </li>
-          <li>
-            <a href="tel:+380961111111" class="header-contact-link">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </div>
-    </header>
-    <main class="main">
-      <section class="button-section">
-        <div class="portfolio">
-          <ul class="main-button-list">
-            <li><button type="button" class="portfolio-button">Усі</button></li>
-            <li>
-              <button type="button" class="portfolio-button">Веб-Сайти</button>
-            </li>
-            <li>
-              <button type="button" class="portfolio-button">Додатки</button>
-            </li>
-            <li>
-              <button type="button" class="portfolio-button">Дизайн</button>
-            </li>
-            <li>
-              <button type="button" class="portfolio-button">Маркетинг</button>
-            </li>
-          </ul>
-      </section>
-      <section class="portfolio-main-section">
-        <ul class="main-portfolio-list">
-          <li class="portfolio-main">
-            <img src="img/img(1).jpg" alt="ноутбук" class="main-image" />
-            <a href="#" class="main-link">Технокряк</a>
-            <p class="image-description">Веб-Сайт</p>
-          </li>
-          <li class="portfolio-main">
-            <img src="img/img(2).jpg" alt="Баскетболісти" class="main-image" />
-            <a href="#" class="main-link">Постер New Orlean vs Golden Star</a>
-            <p class="image-description">Дизайн</p>
-          </li>
-          <li class="portfolio-main">
-            <img src="img/img(3).jpg" alt="Логотип ресторану" class="main-image" />
-            <a href="#" class="main-link">Ресторан Seafood</a>
-            <p class="image-description">Додаток</p>
-          </li>
-          <li class="portfolio-main">
-            <img src="img/img(4).jpg" alt="Навушники" class="main-image" />
-            <a href="#" class="main-link">Проєкт Prime</a>
-            <p class="image-description">Маркетинг</p>
-          </li>
-          <li class="portfolio-main">
-            <img src="img/img(5).jpg" alt="Коробки" class="main-image" />
-            <a href="#" class="main-link">Проєкт Boxes</a>
-            <p class="image-description">Додаток</p>
-          </li>
-          <li class="portfolio-main">
-            <img src="img/img(6).jpg" alt="Монітор" class="main-image" />
-            <a href="#" class="main-link">Inspiration has no borders</a>
-            <p class="image-description">Веб-Сайт</p>
-          </li>
-          <li class="portfolio-main">
-            <img src="img/img(7).jpg" alt="Книга" class="main-image" />
-            <a href="#" class="main-link">Видання Limit Editing</a>
-            <p class="image-description">Дизайн</p>
-          </li>
-          <li class="portfolio-main">
-            <img src="img/img(8).jpg" alt="Бірка" class="main-image" />
-            <a href="#" class="main-link">Проєкт Lab</a>
-            <p class="image-description">Маркетинг</p>
-          </li>
-          <li class="portfolio-main">
-            <img src="img/img(9).jpg" alt="ноутбук" class="main-image" />
-            <a href="#" class="main-link">Growing Business</a>
-            <p class="image-description">Додаток</p>
-          </li>
-        </ul>
-  </div>
-  </section>
-  </main>
-  <footer class="footer">
-    <div class="container">
-    <a href="#" class="footer-webstudio">Web<span class="footer-studio">Studio</span></a>
-    <ul class="footer-list">
+  <header class="header container">
+    <a class="header-webstudio" href="index.html">Web<span class="header-studio">Studio</span></a>
+    <nav class="header-nav">
+      <ul class="header-menu">
+        <li><a href="index.html" class="header-menu-link">Студія</a></li>
+        <li>
+          <a href="portfolio.html" class="header-menu-link">Портфоліо</a>
+        </li>
+        <li><a href="#" class="header-menu-link">Контакти</a></li>
+      </ul>
+    </nav>
+    <ul class="header-contact">
       <li>
-        <a href="https://goo.gl/maps/BeasPpXtZJGkQwrS6" class="footer-address">Місто Київ пр-т Лесі Українки, 26</a>
+        <a href="mailto:info@devstudio.com" class="header-contact-link">info@devstudio.com</a>
       </li>
       <li>
-        <a href="mailto:info@devstudio.com" class="footer-contact">info@devstudio.com</a>
-      </li>
-      <li>
-        <a href="tel:+380961111111" class="footer-contact">+38 096 111 11 11</a>
+        <a href="tel:+380961111111" class="header-contact-link">+38 096 111 11 11</a>
       </li>
     </ul>
+  </header>
+  <main class="main container">
+    <section class="button-section">
+      <div class="portfolio">
+        <ul class="main-button-list">
+          <li><button type="button" class="portfolio-button">Усі</button></li>
+          <li>
+            <button type="button" class="portfolio-button">Веб-Сайти</button>
+          </li>
+          <li>
+            <button type="button" class="portfolio-button">Додатки</button>
+          </li>
+          <li>
+            <button type="button" class="portfolio-button">Дизайн</button>
+          </li>
+          <li>
+            <button type="button" class="portfolio-button">Маркетинг</button>
+          </li>
+        </ul>
+    </section>
+    <section class="portfolio-main-section">
+      <ul class="main-portfolio-list">
+        <li class="portfolio-main">
+          <img src="img/img(1).jpg" alt="ноутбук" class="main-image" />
+          <a href="#" class="main-link">Технокряк</a>
+          <p class="image-description">Веб-Сайт</p>
+        </li>
+        <li class="portfolio-main">
+          <img src="img/img(2).jpg" alt="Баскетболісти" class="main-image" />
+          <a href="#" class="main-link">Постер New Orlean vs Golden Star</a>
+          <p class="image-description">Дизайн</p>
+        </li>
+        <li class="portfolio-main">
+          <img src="img/img(3).jpg" alt="Логотип ресторану" class="main-image" />
+          <a href="#" class="main-link">Ресторан Seafood</a>
+          <p class="image-description">Додаток</p>
+        </li>
+        <li class="portfolio-main">
+          <img src="img/img(4).jpg" alt="Навушники" class="main-image" />
+          <a href="#" class="main-link">Проєкт Prime</a>
+          <p class="image-description">Маркетинг</p>
+        </li>
+        <li class="portfolio-main">
+          <img src="img/img(5).jpg" alt="Коробки" class="main-image" />
+          <a href="#" class="main-link">Проєкт Boxes</a>
+          <p class="image-description">Додаток</p>
+        </li>
+        <li class="portfolio-main">
+          <img src="img/img(6).jpg" alt="Монітор" class="main-image" />
+          <a href="#" class="main-link">Inspiration has no borders</a>
+          <p class="image-description">Веб-Сайт</p>
+        </li>
+        <li class="portfolio-main">
+          <img src="img/img(7).jpg" alt="Книга" class="main-image" />
+          <a href="#" class="main-link">Видання Limit Editing</a>
+          <p class="image-description">Дизайн</p>
+        </li>
+        <li class="portfolio-main">
+          <img src="img/img(8).jpg" alt="Бірка" class="main-image" />
+          <a href="#" class="main-link">Проєкт Lab</a>
+          <p class="image-description">Маркетинг</p>
+        </li>
+        <li class="portfolio-main">
+          <img src="img/img(9).jpg" alt="ноутбук" class="main-image" />
+          <a href="#" class="main-link">Growing Business</a>
+          <p class="image-description">Додаток</p>
+        </li>
+      </ul>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div class="container">
+      <a href="#" class="footer-webstudio">Web<span class="footer-studio">Studio</span></a>
+      <ul class="footer-list">
+        <li>
+          <a href="https://goo.gl/maps/BeasPpXtZJGkQwrS6" class="footer-address">Місто Київ пр-т Лесі Українки, 26</a>
+        </li>
+        <li>
+          <a href="mailto:info@devstudio.com" class="footer-contact">info@devstudio.com</a>
+        </li>
+        <li>
+          <a href="tel:+380961111111" class="footer-contact">+38 096 111 11 11</a>
+        </li>
+      </ul>
     </div>
   </footer>
 </body>
+
 </html>
